// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Content /> render() should render correctly 1`] = `
<div>
  <WithStyles(Container)>
    <WithStyles(Component)
      id={1}
    />
  </WithStyles(Container)>
</div>
`;

exports[`<Content /> render() should render correctly 2`] = `
<div>
  <WithStyles(Container)>
    <WithStyles(Component)
      id={1}
    />
  </WithStyles(Container)>
</div>
`;

exports[`<Content /> render() should render correctly 3`] = `
<div>
  <WithStyles(Container)>
    <WithStyles(Connect(WithSimplifyResaga(Connect(WithSimplifyResaga(CustomerSubscriptionCheck)))))
      id={1}
      showHeader={true}
      userId={1}
    />
  </WithStyles(Container)>
</div>
`;

exports[`<Content /> render() should render correctly 4`] = `
<div>
  <WithStyles(Container)>
    <WithStyles(Component)
      id={1}
    />
  </WithStyles(Container)>
</div>
`;

exports[`<Content /> render() should render correctly 5`] = `
<div>
  <WithStyles(Container)>
    <ConnectFunction
      id={1}
      userId={1}
    />
  </WithStyles(Container)>
</div>
`;

exports[`<Content /> render() should render correctly 6`] = `
<div>
  <WithStyles(Container)>
    <WithStyles(Component)
      id={1}
    />
  </WithStyles(Container)>
</div>
`;

exports[`<Content /> render() should render correctly 7`] = `
<div>
  <WithStyles(Container)>
    <WithStyles(Component)
      id={1}
    />
  </WithStyles(Container)>
</div>
`;
